--- a/ui/package.json
+++ b/ui/package.json
@@ -10,8 +10,8 @@
   "license": "MIT",
   "author": "Marlon Monroy",
   "dependencies": {
-    "react": "16.7.0-alpha.2",
-    "react-dom": "16.7.0-alpha.2"
+    "react": "16.8",
+    "react-dom": "16.8"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
